<resources>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
    <string name="quick_settings_tiles_default">flashlight,airplane,rotation,tethering,datatraffic,cast</string>
    <string name="quick_settings_tiles">default</string>
    <string name="velocity_tracker_impl">platform</string>
    <string name="doze_pulse_schedule">1s,10s,30s,60s</string>
    <string name="system_ui_date_pattern">@android:string/system_ui_date_pattern</string>
    <string name="lland">L Land</string>
    <string name="config_plugBatterySound">/system/media/audio/ui/ChargerPluggedIn.ogg</string>
    <string name="config_batteryFullSound">/system/media/audio/ui/BatteryCharged.3gp</string>
    <string name="quick_settings_tiles_default_prefix">wifi,bt,</string>
    <string name="usb_connected_txt">USB connected</string>
    <string name="to_charge_use_charger_txt">Use a dedicated charger to charge your device</string>
    <string name="status_bar_settings_battery_meter_full_format">%d</string>
    <string name="power_settings_instructions">Enabling STAMINA mode in Power management will optimize battery lifetime</string>
    <string name="battery_low_power_settings">Battery info</string>
    <string name="stamina_start_action">Enable STAMINA mode</string>
    <string name="enable_stamina_tip">You can optimize battery lifetime by enabling STAMINA mode.</string>
    <string name="somc_qs_close">Close</string>
    <string name="somc_qs_hint">Touch and hold icons to rearrange Quick settings</string>
    <string name="somc_qs_title">Active quick settings</string>
    <string name="somc_qs_max_exceeds">Maximum number of quick settings has been selected</string>
    <string name="quick_settings_autosync_label">Auto-sync data</string>
    <string name="quick_settings_data_traffic_label">Mobile data</string>
    <string name="quick_settings_nfc_label">NFC</string>
    <string name="quick_settings_lte_label">LTE</string>
    <string name="quick_settings_stamina_label">STAMINA</string>
    <string name="quick_settings_screen_mirroring_label">Screen mirroring</string>
    <string name="quick_settings_throw_label">Throw</string>
    <string name="quick_settings_volte_label">VoLTE</string>
    <string name="quick_settings_wifi_scanning_label">Wi-Fi: Scanning</string>
    <string name="quick_settings_wifi_connecting_label">Wi-Fi: Connecting</string>
    <string name="status_bar_autosync_dialog_enable_title">Turn on Auto-sync?</string>
    <string name="status_bar_autosync_dialog_enable_warning">"Any changes you make to your accounts on the web will be automatically copied to your phone.

Some accounts may also automatically copy any changes you make on the phone to the web.

To choose what kinds of data you sync for each account, go to Settings > Accounts."</string>
    <string name="status_bar_autosync_dialog_extended_enable_warning">"Any changes you make to your accounts on the web will be automatically copied to your device.

Some accounts may also automatically copy any changes you make on the device to the web.

To choose what kinds of data you sync for each account, go to Settings > Accounts.

Data charges may apply when updating your device. An unlimited data plan is recommended."</string>
    <string name="status_bar_autosync_dialog_disable_title">Turn off Auto-sync?</string>
    <string name="status_bar_autosync_dialog_disable_warning">Turning off auto-sync will lower mobile data and battery usage, but you will need to sync each account manually.</string>
    <string name="toast_message_not_allow_turn_on_hotspot">Wi-Fi hotspot not available in airplane mode</string>
    <string name="accessibility_desc_edit_quick_settings">Edit quick settings</string>
    <string name="somc_start_camera_hint">Swipe to launch camera</string>
    <string name="somc_start_phone_hint">Swipe to launch call handling</string>
    <string name="silent_mode_panel_silent">Silent</string>
    <string name="silent_mode_panel_exceptions">Exceptions</string>
    <string name="silent_mode_panel_allow_exceptions">Allow exceptions</string>
    <string name="silent_mode_panel_allow_alarm">Allow alarm</string>
    <string name="volume_dialog_ringtone">Ringtone</string>
    <string name="volume_dialog_media">Media volume</string>
    <string name="volume_dialog_notifications">Notifications</string>
    <string name="volume_dialog_alarm">Alarm</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">No recent apps</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery is low</string>
    <string name="battery_low_percent_format">%s or less remaining</string>
    <string name="battery_low_percent_format_saver_started">%s or less remaining. Battery saver is on.</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="invalid_charger_title">USB charging not supported.</string>
    <string name="invalid_charger_text">Use only the supplied charger.</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on battery saver?</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on battery saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">"The computer's RSA key fingerprint is:
%1$s"</string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="screenshot_saving_ticker">Saving screenshot…</string>
    <string name="screenshot_saving_title">Saving screenshot…</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Touch to view your screenshot.</string>
    <string name="screenshot_failed_title">"Couldn't capture screenshot"</string>
    <string name="screenshot_failed_text">Content may be protected or the memory may be full.</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Recent apps key</string>
    <string name="accessibility_search_light">Search</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="unlock_label">unlock</string>
    <string name="phone_label">open phone</string>
    <string name="camera_label">open camera</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_wifi_off">Wi-Fi off.</string>
    <string name="accessibility_no_wifi">Wi-Fi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wi-Fi one bar</string>
    <string name="accessibility_wifi_two_bars">Wi-Fi two bars</string>
    <string name="accessibility_wifi_three_bars">Wi-Fi three bars</string>
    <string name="accessibility_wifi_signal_full">Wi-Fi signal full</string>
    <string name="accessibility_wifi_name">Connected to %s</string>
    <string name="accessibility_bluetooth_name">Connected to %s</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX one bar.</string>
    <string name="accessibility_wimax_two_bars">WiMAX two bars.</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="kg_login_username_hint">Username (email)</string>
    <string name="kg_login_password_hint">Password</string>
    <string name="kg_login_submit_button">Sign in</string>
</resources>