<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardAccountView android:orientation="vertical" android:id="@id/keyguard_account_view" android:layout_width="fill_parent" android:layout_height="fill_parent" androidprv:layout_maxHeight="@dimen/keyguard_security_height" androidprv:layout_maxWidth="@dimen/keyguard_security_width"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/keyguard_message_area" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <EditText android:id="@id/login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/kg_login_username_hint" android:layout_alignParentTop="true" android:inputType="textEmailAddress" android:layout_marginStart="7.0dip" android:layout_marginEnd="7.0dip" />
        <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:weightSum="1.0" android:layout_below="@id/login" android:layout_alignLeft="@id/login" android:layout_alignRight="@id/login">
            <EditText android:id="@id/password" android:nextFocusRight="@id/ok" android:nextFocusDown="@id/ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:hint="@string/kg_login_password_hint" android:layout_weight="1.0" android:inputType="textPassword" android:layout_marginEnd="14.0dip" />
            <Button android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kg_login_submit_button" android:layout_weight="0.0" android:layout_marginEnd="1.0dip" />
        </LinearLayout>
    </RelativeLayout>
</com.android.keyguard.KeyguardAccountView>