<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.volume.ZenModePanel android:orientation="vertical" android:id="@id/zen_mode_panel" android:background="@color/system_primary_color" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/zen_buttons_container" android:background="@drawable/qs_background_secondary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="8.0dip" android:elevation="4.0dip">
        <com.android.systemui.volume.SegmentedButtons android:id="@id/zen_buttons" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="@dimen/qs_panel_padding" android:layout_marginEnd="@dimen/qs_panel_padding" />
    </FrameLayout>
    <TextView android:textAppearance="@style/TextAppearance.QS.Subhead" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/zen_title" android:background="@drawable/btn_borderless_rect" android:clickable="false" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/silent_mode_panel_silent" android:paddingStart="16.0dip" android:paddingEnd="8.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/zen_conditions" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <View android:id="@id/zen_divider" android:background="@color/system_secondary_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/zen_subhead" android:layout_width="fill_parent" android:layout_height="148.0dip" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textAppearance="@style/TextAppearance.QS.Subhead" android:ellipsize="end" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/zen_subhead_collapsed" android:background="@drawable/btn_borderless_rect" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip" android:maxLines="2" android:drawableEnd="@drawable/qs_subhead_caret" android:paddingStart="8.0dip" android:paddingEnd="4.0dip" />
        <TextView android:textAppearance="@style/TextAppearance.QS.Subhead" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/zen_subhead_expanded" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/silent_mode_panel_exceptions" android:paddingStart="8.0dip" />
        <ImageView android:id="@id/zen_more_settings" android:background="@drawable/btn_borderless_rect" android:clickable="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_settings" android:scaleType="center" android:contentDescription="@string/accessibility_desc_settings" android:layout_alignParentEnd="true" />
        <Switch android:textAppearance="@style/TextAppearance.QS.Subhead" android:gravity="center_vertical" android:id="@id/allow_exceptions" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/silent_mode_panel_allow_exceptions" android:layout_below="@id/zen_more_settings" android:paddingStart="8.0dip" android:paddingEnd="4.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
        <Switch android:textAppearance="@style/TextAppearance.QS.Subhead" android:gravity="center_vertical" android:id="@id/allow_alarm" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginBottom="16.0dip" android:text="@string/silent_mode_panel_allow_alarm" android:layout_below="@id/allow_exceptions" android:paddingStart="8.0dip" android:paddingEnd="4.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</com.android.systemui.volume.ZenModePanel>